# karakaslargroup-ms

./: .env.example  .gitignore  .impeccable.md  Makefile  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  migration.md
.devcontainer/: Dockerfile  (+1 more)
apps/backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 00ff574b2498_add_construction_project_members.py  09d1a6a4e91d_add_construction_invoices.py  28a1caa54cd6_add_construction_safety_incidents.py  3191e74dc248_add_construction_meetings.py  5b083f614c9c_initial.py  6834dbb496e1_add_construction_budget_lines.py  69a710606157_add_construction_issues.py  a1b2c3d4e5f6_features_v2.py  a620fc6bc1bb_add_construction_photos.py  a831f0da37b6_add_construction_permits_change_orders_.py  b215373fecd0_add_construction_project_type.py  b2c3d4e5f6a7_locations.py  c3d4e5f6a7b8_budget_location.py  ca870920e948_add_construction_punch_list.py  d0a32bba9b6d_add_construction_shipments.py  d1317fa36dd6_add_construction_project_favorites.py  d4ac6523b4f5_add_construction_management_tables.py  (+3 more)
apps/backend/app/: main.py
apps/backend/scripts/: seed.py  seed_data.py
apps/backend/tests/: conftest.py  test_api_guards.py  test_audit_log.py  test_auth_service.py  test_budget.py  test_bulk_status.py  test_chat_tools.py  test_comments.py  test_csv_export.py  test_notifications.py  test_password_reset.py  test_requirement_editing.py  test_requirement_service.py  test_security.py  test_statistics_routes.py  test_user_management.py
(+372 files in other folders)
