[project]
name = "karakaslargroup-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "boto3",
    "aiosmtplib",
    "filetype",
    "python-dotenv",
]

[tool.uv]
package = false
